--- a/Jesus/Stylee.css
+++ b/Jesus/Stylee.css
@@ -1,62 +1,56 @@
 body {
-  background-color: rgb(49, 91, 168);
-  background-image: url("/img/fondo\ verde.jpg");
-  background-size: cover;
-  color: black;
+                                     
+  background-image: url("/img/fondo\ verde.jpg");                             
+  background-size: cover;  
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;                                                            
 }
 
-h1, h2, p {
-  color: black;
-}
+  title {
+     color: black
+     }
 
-li, th, td, input {
-  color: rgb(250, 249, 249);
-}
+             
+     td {
+     color:rgb(247, 250, 250)
+     }
+                 
+     th {
+     color:white;
+   }
 
-.contenedor {
+                     
+   input {                      
+    color:rgb(250, 249, 249);                      
+  }
+                          
+  
+h2 {
+
+  color: white;
+  justify-content: center;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+                             
+}
+                             
+p {                                
+  color:white;
+  justify-content: center;  
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;                               
+}
+                                                                         
+li {
+                                              
   display: flex;
   justify-content: center;
-  align-items: center;
-}
-
-.center-img {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-div {
-  font-size: 22px;
-}
-
-li {
-  text-align: left;
-  list-style-type: none;
-  margin-left: 0;
+  text-decoration: none;
+  color: rgb(253, 254, 255);
   padding: 10px;
+  border-radius: 4px;
+  
 }
 
 h1 {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  text-decoration: none;
-  color: whitesmoke;
-  padding: 10px;
-  border-radius: 4px;
-}
 
-form {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  text-decoration: none;
-  color:black;
-  padding: 10px;
-  border-radius: 4px;
-}
-
-p {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -64,30 +58,82 @@ p {
   color: white;
   padding: 10px;
   border-radius: 4px;
+
 }
 
+form {
 
-
-table {
   display: flex;
   align-items: center;
   justify-content: center;
   text-decoration: none;
-  color: black;
+  color: rgb(245, 247, 248);
   padding: 10px;
   border-radius: 4px;
+
+}
+
+p {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-decoration: none;
+  color: rgb(245, 247, 248);
+  padding: 10px;                                            
+  border-radius: 4px;                                           
+}                                           
+                                           
+.caja-verde-limon {                                         
+  align-items: center;                             
+  display: flex;                                            
+  justify-content: center;                                              
+  background-color: rgb(4, 248, 45);                                            
+  width: 400px;                                           
+  height: 400px;
+                                                                                        
+}
+
+                                             
+.caja-verde-limon img {
+                                                                                        
+  width: 200px;                                         
+  height: 350px;
+  justify-content: center;
+                                             
+}
+
+                                            
+.caja-verde-limon1 {
+                                                                                     
+  align-items: center;                                           
+  background-color: rgb(4, 248, 45);                                          
+  width: 800px;                                           
+  height: 800px;                                             
+}
+                                             
+                                             
+table {
+
+  display: flex;                                                
+  align-items: center;                                                
+  justify-content: center;                                                 
+  text-decoration: none;                                                
+  color: rgb(245, 247, 248);                                                 
+  padding: 10px;                                               
+  border-radius: 4px;                                              
 }
 
 th, td {
   padding: 10px;
   text-align: left;
-  border-bottom: 1px solid black;
-  border-left: 6px solid black;
-  border-bottom: 6px solid black;
-  border-top: 6px solid black;;
-  border-right:6px solid black;
- 
+  border-bottom: 1px solid white;
+  border-left: 6px solid green;
+  border-bottom: 6px solid green;
+  border-top: 6px solid green;
+  border-right:6px solid green;
 }
+
+
 
 .A1 {
   text-align: left;
