--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url(img/54336.jpg);
+  background-image: url(/img/54336.jpg);
   background-repeat: no-repeat;
   background-position: center center;
   height: 1000px;
@@ -23,7 +23,7 @@ h1 {
     border-right:4px solid rgb(239, 187, 182);
     text-align: center;
     width: auto 0;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif ;
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 h2 {
@@ -36,7 +36,7 @@ h2 {
     text-transform: uppercase;
 
     margin-top: 50vh;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif ;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif ;
   }
 
   h2::before {
