--- a/botones de estilo css/botones.css
+++ b/botones de estilo css/botones.css
@@ -1,10 +1,17 @@
 body {
-    color: aquamarine;
+    color: white;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     height: 100%;
     margin: 0;
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: black;
+}
+
+p {
+    color: white;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 .conteiner {
@@ -27,3 +34,49 @@ body {
     text-align: justify;
     justify-content: center;
 }
+
+button {
+    background-color: black;
+    border: none;
+    padding:  16px 32px;
+    color: white;
+    font-size: 20px;
+    font-weight: bold;
+    cursor: pointer;
+    border-radius: 12px;
+    border-left: 4px solid white ;
+    border-bottom: 4px solid white;
+    border-top: 4px solid white;
+    border-right:4px solid white;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+button:hover {
+    background-color: rgb(61, 60, 60) ;
+}
+
+.A1 {
+    text-align: left;
+    width: auto;
+    display: inline-block;
+    background-color: black;
+    padding: 10px 20px;
+    color: white;
+    font-size: 18px;
+    border-left: 6px solid white;
+    border-bottom: 6px solid white;
+    border-top: 6px solid white;
+    border-right:6px solid white;
+    border-radius: 4px;
+    text-decoration: none;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    position: relative;
+    top: -160px;
+    left: -240px;
+  }
+  
+  .A1:hover {
+    background-color: rgb(61, 60, 60);
+  }
+  
+  
