--- a/Calculadora/stylesC.css
+++ b/Calculadora/stylesC.css
@@ -6,7 +6,7 @@ body {
     min-height: 100vh;
     display: grid;
     place-items: center;
-    background-image: url(/img/fondo-lujo-pantalla-degradado-azul-oscuro.jpg);
+    background-image: url("/img/fondo-lujo-pantalla-degradado-azul-oscuro.jpg");
     background-repeat: no-repeat;
     background-position: center center;
     background-attachment: fixed;
